--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 body {
     background-image: linear-gradient(#101010, #101010);
-min-height: 90%;
-    max-width: 90%;
+height: 90%;
+   width: 90%;
 }
 
 
